Switched to using Integer.valueOf to take advantage of new caching implementation in Java 1.5.